# GSOC2012

./: README.md
BasicVideoReader/: CMakeLists.txt  CMakeLists.txt~
BasicVideoReader/include/: contourbasedfingerdetector.h  dynamictimewarping.h  easyhanddetector.h  easyhandsegmentation.h  easyhandtracker.h  extractContour.h  fastqueue.hpp  grabbableball.h  grabbableobject.h  handdetector.h  handsegmentation.cpp  handsegmentation.h  handtracker.h  kalmanhandtracker.h  morphology.h  neighborhoods.hpp  palmcenterdetector.h  rect3d.hpp  segmentHandEasy.h  skeleton.h  trackdrawer.h
BasicVideoReader/src/: CMakeLists.txt  CMakeLists.txt~  contourbasedfingerdetector.cpp  demo.cpp  dynamictimewarping.cpp  easyhanddetector.cpp  easyhandsegmentation.cpp  easyhandtracker.cpp  extractContour.cpp  grabbableball.cpp  handsegmentation.cpp  handtracker.cpp  kalmanhandtracker.cpp  main.cpp  morphology.cpp  onlineTrackingMain.cpp  palmcenterdetector.cpp  segmentHandEasy.cpp  skeleton.cpp  trackdrawer.cpp
